kubernetes/apps/network/envoy-gateway/config/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-cert-manager-certs
  namespace: cert-manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: network
  to:
    - group: ""
      kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-authentik-auth
  namespace: security
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
